--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-{% load static %}
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/swiper.css' %}" />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/swiper.css" />
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="https://api-maps.yandex.ru/2.1/?apikey=9b791e7f-8637-4534-a2da-fcaaa9bb443c&lang=ru_RU"></script>
     <script>
@@ -62,7 +61,7 @@
               <div class="info">
                 <h2>Хомяково</h2>
                 <div class="date">
-                  <img src="./static/images/Calendar.png" alt="картинка" />
+                  <img src="./images/Calendar.png" alt="картинка" />
                   15.08.2023 | 10:00-18:00
                 </div>
               </div>
@@ -80,8 +79,8 @@
     </div>
 
     {{ events|json_script:"events" }}
-    <script src="{% static 'js/functions.js' %}"></script>
-    <script src="{% static 'js/script.js' %}"></script>
-    <script src="{% static 'js/listeners.js' %}"></script>
+    <script src="./js/functions.js"></script>
+    <script src=".js/script.js"></script>
+    <script src=".js/listeners.js"></script>
   </body>
 </html>
