--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
     </div>
 
     {{ events|json_script:"events" }}
-    <script src="./js/functions.js"></script>
+    <!-- <script src="./js/functions.js"></script> -->
     <script src="./js/script.js"></script>
-    <script src="./js/listeners.js"></script>
+    <!-- <script src="./js/listeners.js"></script> -->
   </body>
 </html>
