--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </div>
 
     {{ events|json_script:"events" }}
-    <!-- <script src="./js/functions.js"></script> -->
+    <script src="./js/functions.js"></script>
     <script src="./js/script.js"></script>
     <!-- <script src="./js/listeners.js"></script> -->
   </body>
