--- a/index.html
+++ b/index.html
@@ -81,6 +81,6 @@
     {{ events|json_script:"events" }}
     <script src="./js/functions.js"></script>
     <script src="./js/script.js"></script>
-    <!-- <script src="./js/listeners.js"></script> -->
+    <script src="./js/listeners.js"></script>
   </body>
 </html>
