--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Abob Inc.</title>
   </head>
   <body>
-    <div id="map" style="width: 100%; height: 100%"></div>
+    <div id="map" style="width: 100%; height: 100%">123123123</div>
     <div id="search">
       <div class="dropdown radius">
         <button class="dropdown__button">200</button>
@@ -79,8 +79,8 @@
     </div>
 
     {{ events|json_script:"events" }}
-    <script src="./js/functions.js"></script>
+    <!-- <script src="./js/functions.js"></script> -->
     <script src="./js/script.js"></script>
-    <script src="./js/listeners.js"></script>
+    <!-- <script src="./js/listeners.js"></script> -->
   </body>
 </html>
